fix(Blazor): resolve errors in css affecting table word wrapping
Handles <td> element word wrap in small screen dimensions without
impacting the link:hover behavior. Does not apply to where .control or
.button class is also applied.

--- a/NjordFinance.Web/Components/ThemedComponent.razor.css
+++ b/NjordFinance.Web/Components/ThemedComponent.razor.css
@@ -61,7 +61,6 @@
 ::deep .datagrid-cell a {
     color: var(--theme-text-color-0, black);
     font-weight: bold;
-    text-indent: 0.5rem;
     text-decoration: none;
     display: inline-block;
     width: 100%;
@@ -70,7 +69,7 @@
     padding-bottom: 0.25rem;
 }
 
-    ::deep .datagrid-cell a:hover {
+    ::deep .datagrid-cell.link:hover {
         background-color: var(--theme-tablecell-onhover-color, gray);
         color: var(--theme-text-color-0, black);
         cursor: pointer;
@@ -91,8 +90,9 @@
     color: var(--theme-tablecell-fore-color, black);
 }
 
-::deep .datagrid-cell.text {
-    text-indent: 0.5rem;
+::deep .datagrid-cell:not(.button):not(.control) div {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
     ::deep .datagrid-cell.button .form-control.button.icon {
@@ -192,6 +192,10 @@
         }
 
 ::deep input[type=checkbox]:checked:before {
+    background: var(--theme-hexcolor-primary-1, inherit);
+}
+
+::deep input[type=checkbox]:checked:after {
     background: var(--theme-hexcolor-primary-1, inherit);
 }
 
